# zepazo

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: unit_tests.yml
code_documentation/: conf.py
code_documentation/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  video_utilities.doctree  zepazo.doctree
code_documentation/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  video_utilities.html  zepazo.html
code_documentation/_build/html/_sources/: index.rst.txt  modules.rst.txt  video_utilities.rst.txt  zepazo.rst.txt
docs/Tools/: opencv.md
src/: image_utilities.py  video_functions.py  video_utilities.py  zepazo.py  zepazoCrop.py  zepazoVerify.py
src/Analyzers/: image_utilities.py  video_utilities.py
src/Dators/: dator.py  fsdator.py
src/Impacts/: impact.py
src/Interface/: interface.py  zepazo_params.py
test/: argument.py  testsInterface_zepazo_params.py  tests_dator.py  tests_fsdator.py  tests_image_utilities.py  tests_video_utilities.py  tests_zepazo_crop.py  tests_zepazo_params.py
