[tool.poetry]
name = "zepazo"
version = "0.1.0"
description = "A lunar impact detection software"
authors = ["Antonio Cuadros Lapresta <antculap@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.1"
Sphinx = "^3.5.1"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]
taskipy = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "xvfb-run pytest test/tests_*.py"
